--- a/Mail/index.html
+++ b/Mail/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     
-    <div id="risultato-verifica">
+    <div id="risultato-verifica" class="text-center fs-1">
 
     </div>
 
 
-    <div>
-        <button type="button" id="registrati-ora" class="btn btn-info d-none">Registrati ora!</button>
+    <div id="registrati-ora mx-auto">
+        <button type="button" class="btn btn-info">Registrati ora!</button>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./asset/js/main.js"></script>
 </body>
