--- a/Mail/index.html
+++ b/Mail/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     
-    <div id="risultato-verifica" class="text-center fs-1">
+    <div id="risultato-verifica" class="text-center fs-1 pt-5">
 
     </div>
 
 
-    <div id="registrati-ora mx-auto">
-        <button type="button" class="btn btn-info">Registrati ora!</button>
+    <div id="registrati-ora" class="d-flex justify-content-center pt-5 ">
+        <button type="button" class="btn btn-info fs-1">Registrati ora!</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
